[nrf fromtree] dts: arm: add new gpiote instances definition
Added GPIOTE0, GPIOTE1 instances for legacy devices,
GPIOTE20, GPIOTE30 for Moonlight and GPIOTE130,
GPIOTE131 instances for Haltium.

Signed-off-by: Jakub Zymelka <jakub.zymelka@nordicsemi.no>
(cherry picked from commit dfbcc8911a94f01de22a90282de5a00b8a30ec12)
Signed-off-by: Robert Lubos <robert.lubos@nordicsemi.no>

--- a/dts/arm/nordic/nrf5340_cpuapp_peripherals.dtsi
+++ b/dts/arm/nordic/nrf5340_cpuapp_peripherals.dtsi
@@ -526,6 +526,7 @@ gpio0: gpio@842500 {
 	#gpio-cells = <2>;
 	status = "disabled";
 	port = <0>;
+	gpiote-instance = <&gpiote>;
 };
 
 gpio1: gpio@842800 {
@@ -536,6 +537,7 @@ gpio1: gpio@842800 {
 	ngpios = <16>;
 	status = "disabled";
 	port = <1>;
+	gpiote-instance = <&gpiote>;
 };
 
 ieee802154: ieee802154 {
